# TestParsing

./: README.md  pyproject.toml
src/dintelia/: dintelia_script.py
src/yapdomik/: yapdomik_script.py
src/yapdomik/addition/: constants.py
